fix errors on mobile version

--- a/style.css
+++ b/style.css
@@ -726,8 +726,9 @@ h2{
     margin: 39px 0px 0px 0px;
 }
 @media (min-width: 768px) and (max-width: 999px){
-    * {
-        text-decoration: none!important;    
+    a {
+        text-decoration: none!important; 
+        color: white!important;   
     }
     #benefits-to-you #image{
         grid-row: 1;
